--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,4 +39,5 @@ dependencies {
     compile 'com.google.dagger:dagger:2.12'
     compile 'com.squareup.retrofit2:converter-gson:2.3.0'
     kapt 'com.google.dagger:dagger-compiler:2.12'
+    compile 'com.squareup.picasso:picasso:2.5.2'
 }
