--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,7 +41,14 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.google.code.gson:gson:2.8.6'
     implementation 'com.google.dagger:dagger:2.28.3'
-    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-moshi:2.9.0'
+
+    implementation 'com.squareup.moshi:moshi:1.9.3'
+    implementation 'com.squareup.moshi:moshi-adapters:1.9.3'
+    implementation 'com.squareup.moshi:moshi-kotlin:1.9.3'
+
     kapt 'com.google.dagger:dagger-compiler:2.28.3'
     implementation 'com.squareup.picasso:picasso:2.71828'
 }
