--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,9 +49,6 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.2.0'
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.2.0'
 
-    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
-    implementation 'com.google.code.gson:gson:2.8.6'
-
     implementation "com.google.dagger:hilt-android:$hilt_version"
     kapt "com.google.dagger:hilt-android-compiler:$hilt_version"
 
@@ -62,7 +59,7 @@ dependencies {
     implementation 'com.squareup.moshi:moshi-adapters:1.9.3'
     implementation 'com.squareup.moshi:moshi-kotlin:1.9.3'
 
-    implementation 'com.squareup.picasso:picasso:2.71828'
+    implementation "io.coil-kt:coil:1.1.0"
 
     testImplementation 'junit:junit:4.13'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
